--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #数据库连接信息
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=
+spring.datasource.url= jdbc:mysql://localhost:3306/future?characterEncoding=utf8&useSSL=false
+spring.datasource.username= root    
+spring.datasource.password= root123
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 
-spring.jpa.database-platform=
+spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
